feature: add style

--- a/src/scss/blocks/page.scss
+++ b/src/scss/blocks/page.scss
@@ -1,2 +1,33 @@
-.page__body {
+.page {
+  height: 100%;
+  font-size: 16px;
+  font-family: "Raleway", "Arial", sans-serif;
+  line-height: 22px;
+
+  &__body {
+    overflow-x: hidden;
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    min-height: 100%;
+    margin: 0;
+    background-color: $black;
+    color: $d-gray;
+  }
+
+  &__container {
+    max-width: 1920px;
+    width: 100%;
+    margin: 0 auto;
+    overflow-x: hidden;
+  }
+
+  &__main-title {
+    display: flex;
+    justify-content: center;
+    padding: 40px 0 20px;
+
+    svg {
+      fill: transparent;
+    }
+  }
 }
