--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,16 @@
 @import "fonts.scss";
 @import "mixins.scss";
+@import "general.scss";
 @import "vars.scss";
 @import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/main.scss";
+@import "blocks/slider.scss";
+@import "blocks/choise.scss";
+@import "blocks/swiper.scss";
+@import "blocks/ideal.scss";
+@import "blocks/about.scss";
+@import "blocks/sale.scss";
+@import "blocks/footer.scss";
 
 
