--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,1 +1,10 @@
+$black: #131111;
+$l-black: #333333;
+$d-gray: #7D7D7D;
+$m-gray: #BCBCBC;
+$l-gray: #D8D8D8;
+$xl-gray: #F5F5F5;
+$blue: #0178F3;
+$orange: #F64F00;
+
 
