--- a/src/scss/blocks/about.scss
+++ b/src/scss/blocks/about.scss
@@ -1,22 +1,25 @@
 .about {
-  margin-top: -75px;
+  margin-top: -37px;
   color: $l-black;
 
   &__container {
     display: flex;
     gap: 134px;
-    padding: 100px 160px;
+    padding: 100px 160px 45px;
     background-color: $xl-gray;
     margin-left: 190px;
-    border-radius: 50px 0 0 50px;
+    border-radius: 100px 0 0 100px;
   }
 
   &__title {
     font-weight: 700;
     color: inherit;
+    margin-bottom: 23px;
   }
 
   &__text {
+    font-size: 18px;
+    line-height: 24px;
     max-width: 491px;
     margin-bottom: 40px;
   }
@@ -46,7 +49,7 @@
   }
 
   &__info {
-    margin-top: 60px;
+    margin-top: 79px;
   }
 
   &__info-title {
