--- a/src/scss/blocks/swiper.scss
+++ b/src/scss/blocks/swiper.scss
@@ -9,11 +9,13 @@
     border-radius: 0 30px 30px 0;
 
     &.choise__btn {
-      top: 30px;
+      top: 22px;
+      right: 0;
     }
 
     &.slider__btn {
-      right: 300px;
+      top: 400px;
+      right: 350px;
     }
 
     &::after {
@@ -30,12 +32,13 @@
     border-radius: 30px 0 0 30px;
 
     &.choise__btn {
-      top: 30px;
-      left: 1054px;
+      top: 22px;
+      left: 1063px;
     }
 
     &.slider__btn {
-      left: 300px;
+      top: 400px;
+      left: 350px;
     }
 
     &::after {
